--- a/sostrades/integration/secret/mysql-integration-pv.yaml
+++ b/sostrades/integration/secret/mysql-integration-pv.yaml
@@ -4,7 +4,8 @@ metadata:
   name: mysql-integration-pv
 spec:
   capacity:
-    storage: 5Gi
+#    storage: 5Gi
+    storage: 2Gi
   hostPath:
     path: /mnt/data
     type: ''
@@ -21,8 +22,8 @@ metadata:
   name: sostrades-api-data-pv
 spec:
   capacity:
-    storage: 5Gi
-  hostPath:
+#    storage: 5Gi
+    storage: 2Gi  hostPath:
     path: /mnt/data
     type: ''
   accessModes:
@@ -37,8 +38,8 @@ metadata:
   name: mysql-sostrades-pv
 spec:
   capacity:
-    storage: 3Gi
-  hostPath:
+#    storage: 5Gi
+    storage: 2Gi  hostPath:
     path: /mnt/data
     type: ''
   accessModes:
@@ -57,7 +58,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 2Gi
 ---
   
 apiVersion: v1
@@ -69,6 +70,6 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi
+      storage: 2Gi
 ---
   
